# chomp

./: .gitignore  .gitmodules  AD_ASSESSMENT.md  AD_IMPROVEMENTS.patch  AD_IMPROVEMENTS_APPLIED.md  AD_REVIEW_SUMMARY.md  CMakeLists.txt  IMPROVEMENTS.md  LINEAR_SYSTEM_QUICKSTART.md  README.md  test_ls  test_sn  test_sn_merge
docs/: index.html
include/: amd.h  config.h  definitions.h  model.h  regularizer.h  supernodes.h  types.h
include/ad/: ADBindings.h  ADGraph.h  Definitions.h  Expression.h  OpDispatch.h  OpTraits.h  Operators.h  Suspect.h  Variable.h  ad_bindings.h  ad_graph.h  egraph.h  egraph_aux.h  expression.h  op_dispatch.h  op_traits.h  operators.h  simd_helpers.h  suspect.h  variable.h
include/blocks/: box.h  filter.h  funnel.h  globalization.h  linesearch.h  nb_utils.h
include/config/: app.h  chomp.h  kkt.h  solver.h  tr.h
include/core/: definitions.h
include/ip/: Aux.h  Helpers.h  Soc.h  Stepper.h  aux.h  helpers.h  mg_solver.h  soc.h  stepper.h
include/kkt/: core.h  helper.h  hpv.h  kkt_core.h  kkt_helper.h  kkt_hpv.h
include/linear_system/: README.md  qdldl.h  supernodes.h
include/model/: model.h  regularizer.h
include/qp/: OSQP.h  PIQP.h  QDLDL.h
include/simplex/: presolver.h  simplex.h  simplex_aux.h
include/sqp/: Stepper.h  dopt.h  stepper.h
include/trustregion/: Aux.h  Manager.h  aux.h  box.h  config.h  definitions.h  manager.h  manager_restoration.inl  manager_soc.inl  model_utils.h  projection.h  subproblem.h
src/: ad_bindings.cpp  amdqg_bindings.cpp  chomp.cpp  osqp_bindings.cpp  piqp_bindings.cpp  qdldl_bindings.cpp  simplex_bindings.cpp
src/ad/: ADGraph.cpp  Expression.cpp  Variable.cpp  ad_graph.cpp  expression.cpp
tests/: bench_ad_vs_torch.py  bench_regression.py  test_ad_smoke.py  test_ad_vs_torch.py  test_chomp_binding_lifetimes.py  test_chomp_convexity_suspect.py  test_chomp_ip_smoke.py  test_chomp_sqp_smoke.py  test_linear_system.py  test_linear_system_standalone.cpp  test_sparse_hess.py  test_supernodes_correctness.cpp  test_supernodes_merge.cpp
